--- a/top/style/header-sub.css
+++ b/top/style/header-sub.css
@@ -74,6 +74,7 @@
 
 /*  =======필터 모달=======  */
 .filter-modal-popup {  
+  display: none;
   opacity: 0;
   position: fixed;
   top: 10vh;
@@ -90,7 +91,8 @@
 /* 필터 보일때 */
 .filter-modal-popup.show {  
   opacity: 1;
-  visibility: visible;
+  visibility: visible;  
+  display: block;
 }
 
 /* X */
@@ -110,7 +112,8 @@
 .filter-columns {
   flex-wrap: nowrap;  
   margin-top: 8px;
-  justify-content: space-between;    
+  justify-content: space-between;
+  align-items: flex-start;    
 }
 
 /* 필터 text */
