--- a/top/style/header-top.css
+++ b/top/style/header-top.css
@@ -96,3 +96,29 @@
   border: none;  
   cursor: pointer;
 }
+/* 600px 미만일때 */
+@media (max-width: 600px) {
+  .search-input {
+    display: none;
+  }
+  .header-top .left {
+    margin-left: 0px;
+  }
+  .search-form{
+    width: auto
+  }
+
+  .searching .search-input {
+    display: block;
+    flex: 1;
+  }
+
+  .searching .left,
+  .searching .right {
+    display: none;
+  }
+
+  .searching .mic-button {
+    display: block;
+  }
+}
