--- a/home/home.css
+++ b/home/home.css
@@ -1,3 +1,6 @@
+:root {
+  --text-align: left;}
+
 .right-content {
   flex: 1;
   min-width: 0;
@@ -10,16 +13,15 @@
   overflow: hidden;
   gap: 20px;
   justify-content: flex-start;
-  
 }
 /* 카드 영역 */
 .card {  
   max-width: 100%;
   aspect-ratio: 4 / 3;
   text-align: center;
-  border: 1px solid white;
   display: flex;
   flex-direction: column;
+  border-radius: 5%
 }
 /* 카드 이미지 */
 .card img {
@@ -27,6 +29,7 @@
   height: auto;
   aspect-ratio: 16 / 9;
   object-fit: cover;
+  border-radius: 5%
 }
 /* 내용 칸 */
 .card-content {
@@ -53,11 +56,17 @@
 /* 카드 내용 중 첫 텍스트 */
 .card-text1 {
   padding-top: 12px;
+  text-align: left;
   font-weight: bold;
 }
 
 .card-text2 {
   color: #aaaaaa;
+  text-align: left;
+}
+.card-text3 {
+  color: #aaaaaa;
+  text-align: left;
 }
 
 @media (max-width: 1315px) {
