--- a/top/style/header-top.css
+++ b/top/style/header-top.css
@@ -8,7 +8,11 @@
   position: fixed;  
   z-index: 1000;
 }
-
+/* 뒤로가기 이미지*/
+.back-Button{
+  border: none;
+  margin-right: 10px;  
+}
 /* 공통 아이콘 스타일 */
 .icon {
   width: 40px;  
@@ -96,29 +100,38 @@
   border: none;  
   cursor: pointer;
 }
+
 /* 600px 미만일때 */
 @media (max-width: 600px) {
-  .search-input {
+
+  /* 기본 숨김 */
+  .search-input,
+  .mic-button {
     display: none;
   }
+
   .header-top .left {
     margin-left: 0px;
   }
-  .search-form{
-    width: auto
-  }
 
-  .searching .search-input {
+  .search-form {
+    width: auto;
+  }
+  /* 돋보기 버튼 클릭시 */
+  .header-top.searching .search-input {
     display: block;
-    flex: 1;
+  }
+  .header-top.searching .left,
+  .header-top.searching .right {
+    display: none; /* 왼쪽/오른쪽 숨기기 */
   }
 
-  .searching .left,
-  .searching .right {
-    display: none;
+  .header-top.searching .center {
+    flex: 1; /* center를 화면 꽉 채우게 */
+    justify-content: center;
   }
-
-  .searching .mic-button {
+  
+  .header-top.searching .mic-button {
     display: block;
   }
 }
