--- a/Channel/channel.css
+++ b/Channel/channel.css
@@ -47,16 +47,16 @@
     color: gray;
 }
 
-/* 구독자 버튼 */
+/* 구독 버튼 */
 .subscribe-btn {
     color: black;
     background-color: white;
     border: none;
     width: 116px;
     height: 36px;
-    padding: 10px 16px;
+    padding: 10px;
     font-weight: bold;
-    border-radius: 2px;
+    border-radius: 30px; 
     cursor: pointer;
     transition: background-color 0.2s ease, transform 0.2s ease;
     align-self: center;
@@ -66,7 +66,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    gap: 10px; /* 벨과 글자 간격 */
+    gap: 5px; /* 벨과 글자 간격 */
 }
 
 /* 버튼 누를 때 살짝 눌리는 효과 */
