--- a/css/common.css
+++ b/css/common.css
@@ -53,6 +53,7 @@ aside {
     overflow-y: auto;
     scrollbar-width: none;
     background-color: var(--color-aside);
+    z-index: 1000;
 }
 
 /* 목록 */
