--- a/home/home.css
+++ b/home/home.css
@@ -9,55 +9,64 @@
   grid-template-columns: repeat(4,minmax(240px,1fr));
   overflow: hidden;
   gap: 20px;
-  justify-content: flex-start;
-  
+  justify-content: flex-start;  
 }
 /* 카드 영역 */
 .card {  
   max-width: 100%;
   aspect-ratio: 4 / 3;
-  text-align: center;
-  border: 1px solid white;
+  text-align: center;  
   display: flex;
   flex-direction: column;
+  border-radius: 5%;
 }
-/* 카드 이미지 */
 .card img {
   width: 100%;
   height: auto;
   aspect-ratio: 16 / 9;
   object-fit: cover;
+  border-radius: 5%;
 }
-/* 내용 칸 */
+
+/* 내용 칸 layout */
 .card-content {
   display: flex;
   flex: 1;
   gap: 10px;
   object-fit: cover;
 }
-/* 카드 구독자 모습 */
+
+/* 카드 프로필 layout */
 .card-title {
   writing-mode: vertical-rl;
   padding: 12px 26px 12px 0;
   width: auto;
   white-space: nowrap;
 }
-
-/* 카드 내용 */
+/* 카드 내용 layout*/
 .card-description {
   display: flex;
   flex: 1;
   flex-direction: column;
   gap: 10px;
 }
-/* 카드 내용 중 첫 텍스트 */
+
+/* 카드 제목 */
 .card-text1 {
   padding-top: 12px;
   font-weight: bold;
+  text-align: left;
 }
-
+/* 카드 주인 */
 .card-text2 {
   color: #aaaaaa;
+  text-align: left;
+}
+
+/* 카드 조회수 , 업로드 날짜 */
+.card-text3 {
+  color: #aaaaaa;
+  text-align: left;
 }
 
 @media (max-width: 1315px) {
