--- a/Channel/channel.css
+++ b/Channel/channel.css
@@ -17,13 +17,13 @@
     object-fit: cover;
     display: block;
 }
-  /* 채널 주인 정보 */
+/* 채널 주인 정보 */
 .channel-info {
     display: flex;  
     padding: 20px 65px;
     gap: 20px;
 }
-  /* 채널 주인 프로필 */
+/* 채널 주인 프로필 */
 .profile-img {
     width: 100px;  
     border-radius: 50%;  
@@ -36,7 +36,7 @@
     justify-content: center;
 }
 
-  /* 채널 이름 */
+/* 채널 이름 */
 .channel-name {
     font-size: 24px;
     font-weight: bold;
@@ -47,7 +47,7 @@
     color: gray;
 }
 
-  /* 구독자 버튼 */
+/* 구독자 버튼 */
 .subscribe-btn {
     color: black;
     border: none;
@@ -55,16 +55,45 @@
     font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
-    transition: background-color 0.2s ease;  
-    align-self: center;
+    transition: background-color 0.2s ease, transform 0.2s ease;  /* 구독중 시 효과 */   
+    align-self: center;    
+    font-size: 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px; /* 벨과 글자 간격 */
 }
 
-.subscribe-btn:hover {
-    background-color: #d9d9d9;
-}
-
+/* 구독 버튼 누를시 활성화 */
 .subscribe-btn:active {
     transform: scale(0.96);
+}
+
+/* 벨 효과 */
+@keyframes bell-swing {
+    0% { transform: rotate(0deg); }
+    10% { transform: rotate(15deg); }
+    20% { transform: rotate(-15deg); }
+    30% { transform: rotate(12deg); }
+    40% { transform: rotate(-12deg); }
+    50% { transform: rotate(8deg); }
+    60% { transform: rotate(-8deg); }
+    70% { transform: rotate(4deg); }
+    80% { transform: rotate(-4deg); }
+    90% { transform: rotate(2deg); }
+    100% { transform: rotate(0deg); }
+}
+/* 벨 애니메이션 */
+.bell-shake {
+    animation: bell-swing 1s ease forwards;
+    transform-origin: top center;
+}
+
+/* 벨 아이콘 스타일 */
+.bell-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
 }
 
 /* 채널 정보 목차 */
@@ -123,9 +152,10 @@
 }
 
 /* 채널 Main Preview 화살표 layout */
-.video-thumb {
+.video-thumb {    
     width: 90%;
     height: 90%;
+    margin-left: 20px;
     object-fit: cover;
     border-radius: 12px;
     display: block;
@@ -208,7 +238,7 @@
 /* 카드 배치: 카드 크기는 고정, 개수는 자동 반응형 layout */
 .playlist-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 214px); /* 고정 크기 카드 반복 */
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* 고정 크기 카드 반복 */
     gap: 15px;
     justify-content: center;
     width: 100%;
@@ -220,6 +250,7 @@
 .playlist-card {  
     cursor: pointer;  
     text-decoration: none;  
+    width: 100%; 
 }
 
 .playlist-card:hover {
@@ -296,5 +327,12 @@
     }
     .sidebar {
         display: none;
+    }
+}
+/* 485px 이하에서는 2개 고정 */
+@media (max-width: 700px) {
+    .playlist-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px;
     }
 }
