--- a/videos/videos.css
+++ b/videos/videos.css
@@ -7,7 +7,9 @@
   display: flex;
   justify-content: center;
 }
-
+.video-main-content{
+  flex: 3;
+}
 /* 비디오 플레이어 전체 레이아웃 */
 .video-page__player {
   display: flex;
@@ -61,8 +63,6 @@
   50% { transform: translate(-50%, -50%) scale(1.1); opacity: 1; }
   100% { transform: translate(-50%, -50%) scale(1); opacity: 0.8; }
 }
-
-
 
 /* 영상 제목 */
 .video-title {
@@ -202,6 +202,15 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+/* 오른쪽 추천 영상 */
+.related-videos2 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 400px;
 }
 
 /* 관련 추천 영상 이미지 */
