--- a/home/home.css
+++ b/home/home.css
@@ -14,8 +14,7 @@
 /* 카드 영역 */
 .card {  
   max-width: 100%;
-  aspect-ratio: 4 / 3;
-  text-align: center;  
+  aspect-ratio: 4 / 3;  
   display: flex;
   flex-direction: column;
   border-radius: 5%;
@@ -47,8 +46,7 @@
 .card-description {
   display: flex;
   flex: 1;
-  flex-direction: column;
-  gap: 10px;
+  flex-direction: column;  
 }
 
 /* 카드 제목 */
@@ -56,6 +54,7 @@
   padding-top: 12px;
   font-weight: bold;
   text-align: left;
+  margin-bottom: 10px;
 }
 /* 카드 주인 */
 .card-text2 {
