--- a/css/common.css
+++ b/css/common.css
@@ -6,7 +6,6 @@
     --font-main: "Roboto" ,'Noto Sans KR', sans-serif;    
 }
 
-/* reset */
 * {
     margin: 0;
     padding: 0;
@@ -25,8 +24,7 @@ html, body {
 
 /* header 높이 설정 */
 header {
-    height: 56px;
-    z-index: 1000;
+    height: 56px;    
     background-color: #212121;
 }
 /* main 기본 layout */
@@ -35,25 +33,10 @@ main {
     width: 100%;
 }
 
-/* 사이드바 기본 색상 */
-aside {    
-    background-color: var(--color-aside);    
-    width: 190px;       
-}
 /* 헤더 밑에 내용 */
-.container {
+.page-container {
     display: flex;
     height: 100%;    
-}
-
-/* 사이드바 */
-.sidebar {        
-    position: fixed;           
-    height: 100%;    
-    overflow-y: auto;
-    scrollbar-width: none;
-    background-color: var(--color-aside);
-    z-index: 10;
 }
 
 /* 목록 */
@@ -72,9 +55,31 @@ aside.mobile-open {
     z-index: 10;;        
 }
 
-.retry-btn {
+/* 에러 발생시 다시 시도 버튼  */
+.error__retry-btn {
     border-radius: 5px;
     background-color: white;
     color: black;
     padding: 5px;
+}
+
+/* 벨 효과 */
+@keyframes bell-swing {
+    0% { transform: rotate(0deg); }
+    10% { transform: rotate(15deg); }
+    20% { transform: rotate(-15deg); }
+    30% { transform: rotate(12deg); }
+    40% { transform: rotate(-12deg); }
+    50% { transform: rotate(8deg); }
+    60% { transform: rotate(-8deg); }
+    70% { transform: rotate(4deg); }
+    80% { transform: rotate(-4deg); }
+    90% { transform: rotate(2deg); }
+    100% { transform: rotate(0deg); }
+}
+
+/* 벨 애니메이션 */
+.common__bell--shake {
+    animation: bell-swing 1s ease forwards;
+    transform-origin: top center;
 }
